修改.gitignore添加忽略项目 新建BeforeBoostTemplate.sh